--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ element {
   height: 100px;
   display: flex;
   color: white;
-  padding: 0px 5px 0px 40px;
+  padding: 0px 15px 0px 40px;
 }
 @media (max-width: 575px) {
   .main-header {
@@ -38,6 +38,37 @@ element {
   .main-header {
     background-color: #363435;
   }
+}
+.main-header_web {
+  padding-right: 15px;
+  justify-content: flex-end;
+  background-color: #151515;
+}
+
+.header-button {
+  /* сброс стилей кнопки */
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  /* правила для кнопки в шапке сайта */
+  color: lightgray;
+  margin: 38px 10px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.header-button:hover {
+  color: white;
+}
+.header-button:active, .header-button:focus {
+  outline: none;
+}
+.header-button::-moz-focus-inner {
+  border: 0;
 }
 
 .phone {
@@ -135,50 +166,51 @@ element {
 }
 
 .logo {
-  height: 180px;
-  width: 100%;
-  background-repeat: no-repeat;
+  height: 330px;
+  width: 300px;
+  margin: 0 auto;
 }
-@media (max-width: 575px) {
+@media (max-width: 765px) {
   .logo {
-    background: linear-gradient(182deg, #151515 15%, #313131 80%);
-  }
-  .logo__background {
-    width: 100%;
-    height: 100%;
-    background-image: url(./images/fathers-mobile.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+    height: 220px;
+    width: 200px;
+    margin-left: calc(50% - 116px);
   }
 }
-@media (min-width: 575px) {
+/* @media (orientation:landscape) {
+  .logo {
+    display: none;
+  }
+} */
+/* @media (min-width: 575px) {
   .logo {
     background-image: url(./images/fathers.jpg);
     background-size: contain;
     background-position: center;
     background-color: #363435;
   }
-}
+} */
 
 /* ===============================Main========================================= */
 
 .top-section {
   width: 100%;
-  height: calc(100vh - 280px);
+  height: calc(100vh - 100px);
   background-image: url(./images/karate-1343889_1920.jpg),
     linear-gradient(rgba(0, 0, 0, 0), #313131);
   background-blend-mode: multiply;
   background-size: cover;
-  padding-top: 10px;
+  padding-top: 60px;
   color: #fefefe;
-  padding-left: 40px;
+  /* padding-left: 40px; */
   background-size: cover;
+  display: flex;
+  flex-direction: column;
 }
 @media (max-width: 575px) {
   .top-section {
     padding-top: 80px;
-    height: calc(100vh - 260px);
+    height: calc(100vh - 80px);
   }
 }
 h1 {
@@ -193,14 +225,23 @@ h1 {
     display: none;
   }
   .top-section {
-    padding-top: 10%;
+    padding-top: 20px;
+    height: calc(100vh - 200px);
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
   .top-section__extra-info-list {
     display: none;
   }
+  .top-section {
+    height: calc(100vh - 200px);
+  }
+}
+
+.top-section__text {
+  align-self: flex-end;
+  margin: auto 10px auto 30px;
 }
 
 /* ===============================Main__faq========================================= */
@@ -241,6 +282,7 @@ h1 {
 @media (min-width: 768px) {
   .MainNavButtons {
     flex-direction: row;
+    height: 120px;
   }
 }
 
