--- a/src/components/main/Main__slider/slider.scss
+++ b/src/components/main/Main__slider/slider.scss
@@ -1,11 +1,23 @@
 .transition-on-hover:hover {
     transform: scale(1.2) !important;
     transition: 0.8s !important;
-    -webkit-filter: brightness(40%) !important;
+    filter: brightness(40%) !important;
     overflow: hidden !important;
 } 
 .overflow-on-hover:hover {
     transition: 0.8s !important;
-    -webkit-filter: brightness(40%) !important;
+    filter: brightness(40%) !important;
     overflow: hidden !important;
+}
+
+
+// Стили для карусели на большое разрешение экрана
+
+.makeStyles-title-69 {
+    font-size: 1.6em !important;  
+}
+
+.makeStyles-titleBar-70 {
+    background: linear-gradient(to top, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0.5) 70%, rgba(0,0,0,0) 100%) !important;
+    height: 65px !important;
 }
