--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,15 @@ body {
 }
 
 @font-face {
-  font-family: Font;
-  src: url('./fonts/Furore.woff2')
+  font-family: furore;
+  src: url('./fonts/furore.woff2')
          format('woff2'),
-       url('fonts/Furore.woff')
+       url('fonts/furore.woff')
          format('woff');
 }  
 
 * {
-  font-family: 'Furore', arial;
+  font-family: 'furore', arial;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -19,10 +19,10 @@ body {
 
 
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
+} */
 
 a {
   text-decoration: none;
