Add routing to images

--- a/src/components/main/Main__slider/slider.scss
+++ b/src/components/main/Main__slider/slider.scss
@@ -13,7 +13,7 @@
 
 // Стили для карусели на большое разрешение экрана
 
-.makeStyles-title-69 {
+.MuiGridListTileBar-title{
     font-size: 1.6em !important;  
 }
 
